Fixing spacing

--- a/wp-content/plugins/crown-blocks/src/block-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-header/style.scss
@@ -2,7 +2,7 @@ $spacer: 0.25rem;
 
 .wp-block-crown-blocks-header {
 	margin-bottom: 1.5rem;
-	padding-bottom: 0.375rem;
+	padding-bottom: 0.9375rem;
 	position: relative;
 	> hr {
 		position: absolute;
